--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "react-router build",
     "dev": "react-router dev",
-    "lint": "eslint --ignore-path .gitignore --cache --cache-location ./node_modules/.cache/eslint .",
+    "lint": "eslint .",
+    "format": "prettier --write .",
     "reset": "rm -rf node_modules && rm -rf .cache && npm i",
     "start-local-dev": "rm -rf .cache && npm run prepare && npm run dev",
     "start": "react-router-serve ./build/server/index.js",
@@ -16,30 +17,31 @@
     "prettier": "prettier \"{app,__tests__}/**/*.{js,ts,tsx}\" --check"
   },
   "dependencies": {
-    "@radix-ui/themes": "^3.0.5",
-    "@react-router/fs-routes": "^7.2.0",
-    "@react-router/node": "^7.2.0",
-    "@react-router/serve": "^7.2.0",
-    "@workos-inc/authkit-react-router": "^0.1.0",
+    "@radix-ui/themes": "^3.2.1",
+    "@react-router/fs-routes": "^7.6.2",
+    "@react-router/node": "^7.6.2",
+    "@react-router/serve": "^7.6.2",
+    "@workos-inc/authkit-react-router": "^0.4.1",
     "isbot": "^4.1.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router": "^7.2.0"
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-router": "^7.6.2"
   },
   "devDependencies": {
-    "@react-router/dev": "^7.0.0",
-    "@types/react": "^18.2.20",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^7.13.1",
-    "eslint": "^8.38.0",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-import": "^2.28.1",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "@eslint/js": "^9.28.0",
+    "@react-router/dev": "^7.6.2",
+    "@types/react": "^19.1.7",
+    "@types/react-dom": "^19.1.6 ",
+    "eslint": "^9.28.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.2.0",
+    "prettier": "^3.5.3",
     "relative-deps": "^1.0.7",
-    "typescript": "^5.7.3",
-    "vite": "^5.4.11",
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.34.0",
+    "vite": "^6.3.5",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "prettier": {
