update readme and use default port

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,7 @@
+# openssl rand -base64 32
+WORKOS_COOKIE_PASSWORD="your-secure-cookie-password"
+
 # Available in your WorkOS dashboard
-WORKOS_CLIENT_ID=
-WORKOS_API_KEY=
-WORKOS_REDIRECT_URI=
-WORKOS_COOKIE_PASSWORD=
+WORKOS_CLIENT_ID="..."
+WORKOS_API_KEY="..."
+WORKOS_REDIRECT_URI="http://localhost:5173/callback"
